--- a/ansible/codigos/ansible-install-nginx.yml
+++ b/ansible/codigos/ansible-install-nginx.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: local
   tasks:
-    - name: Install nginx
+    - name: Install Nginx local
       apt:
+        name: nginx
         state: present
-        
