--- a/ansible/codigos/ansible-ubuntu-domain.yml
+++ b/ansible/codigos/ansible-ubuntu-domain.yml
@@ -17,11 +17,18 @@
           - adcli
           - policycoreutils-python-utils
     - name: Adicionando os servidores de DNS no sistema
+      become_user: root
       shell: "{{ item }}"
       with_items:
       - echo "nameserver 10.10.10.10" >> /etc/resolv.conf
       - echo "nameserver 10.10.10.10" >> /etc/resolv.conf
       - echo "session    required    pam_mkhomedir.so skel=/etc/skel umask=0022" >> /etc/pam.d/login
       - echo "session    required    pam_mkhomedir.so skel=/etc/skel umask=0022" >> /etc/pam.d/common-session
-      - echo "session    required    pam_mkhomedir.so skel=/etc/skel umask=0022" >> /etc/pam.d/gdm-autologin
+    - name: Desabilitando o firewall do iptables
+      command: iptable -F
+    - name: Adicionando o domínio sugerido
+      shell: realm join --user=Administrator cps.cti.gov.br
+    - name: Usando o comando sed para ajustes
+      shell: sed -i 's/use_fully_qualified_names = True/use_fully_qualified_names = False/' /etc/sssd/sssd.conf
+      
 ...
