--- a/ansible/projetos/instance.yml
+++ b/ansible/projetos/instance.yml
@@ -30,7 +30,14 @@
       apt: 
         deb: https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
     - name: Install Google Chrome
-  
+    
+    # Configuring another files
+    - name: Adding new files
+      apt:
+        state: latest
+    - name: sdsdsd
+      apt:
+        state: latest
 
 
 
