--- a/ansible/projetos/deploy-container.yml
+++ b/ansible/projetos/deploy-container.yml
@@ -1,8 +1,15 @@
 ---
 - hosts: local
+  vars:
+    create_containers: 4
+    default_container_name: docker
+    default_container_image: ubuntu
+    default_container_command: sleep 1d
   tasks:
     - name: Create a container with limited
       docker_container:
-        name: sleepy
-        image: ubuntu:16.04
+        name: my-container
+        image: ubuntu:17.04
+        command: ["sleep", "infinity"]
+        
 ...
