--- a/ansible/projetos/deploy-container.yml
+++ b/ansible/projetos/deploy-container.yml
@@ -1,15 +1,18 @@
 ---
 - hosts: local
   vars:
-    create_containers: 4
+    create_containers: 3
     default_container_name: docker
     default_container_image: ubuntu
     default_container_command: sleep 1d
   tasks:
     - name: Create a container with limited
       docker_container:
-        name: my-container
-        image: ubuntu:17.04
-        command: ["sleep", "infinity"]
+        name: "{{default_container_name}}{{ item }}"
+        image: "{{ default_container_image }}"
+        command: "{{ default_container_command }}"
+        state: present
+      with_sequence: count={{ create_containers }}
+
         
 ...
